--- a/Introduction Data Mining/aufgaben_dm_intro.ipynb
+++ b/Introduction Data Mining/aufgaben_dm_intro.ipynb
@@ -57,6 +57,65 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### 1.1 \n",
+        "\n",
+        "$\\frac{8+2+4+5+1+2+6}{7} = 4$\n",
+        "\n",
+        "$4$\n",
+        "\n",
+        "$\\frac{1+2}{2}=1.5$\n",
+        "\n",
+        "$\\frac{1+2+2+4+5+6}{6}=3.33$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vFe3-yIsSNio"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.2"
+      ],
+      "metadata": {
+        "id": "ZRedDQvmW2Vq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "a = np.array([8,2,4,5,1,2,6])\n",
+        "print(np.mean(a))\n",
+        "print(np.median(a))\n",
+        "print(np.quantile(a,0.25))\n",
+        "print(np.quantile(a,0.75))"
+      ],
+      "metadata": {
+        "id": "70BfRGnWW7yG",
+        "outputId": "531351ce-772e-4b73-cf18-9bfc943e4541",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.0\n",
+            "4.0\n",
+            "2.0\n",
+            "5.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VwyNjbP1EYJO"
       },
@@ -79,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "mVsSQMyMEYJP"
       },
