--- a/Introduction Data Mining/aufgaben_dm_intro.ipynb
+++ b/Introduction Data Mining/aufgaben_dm_intro.ipynb
@@ -94,11 +94,11 @@
         "print(np.quantile(a,0.75))"
       ],
       "metadata": {
-        "id": "70BfRGnWW7yG",
-        "outputId": "531351ce-772e-4b73-cf18-9bfc943e4541",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "70BfRGnWW7yG",
+        "outputId": "531351ce-772e-4b73-cf18-9bfc943e4541"
       },
       "execution_count": 2,
       "outputs": [
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "mVsSQMyMEYJP"
       },
@@ -147,6 +147,25 @@
         "import pandas as pd\n",
         "# df = pd.read_csv(...)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import io\n",
+        "import shutil\n",
+        "\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Advanced-Data-Mining-Exercises/main/Introduction%20Data%20Mining/wine.csv'\n",
+        "response = requests.get(url, allow_redirects = True)\n",
+        "\n",
+        "with open('wine.csv', 'wb') as fin:\n",
+        "    shutil.copyfileobj(io.BytesIO(response.content), fin)"
+      ],
+      "metadata": {
+        "id": "Zz1LwzyHYcRz"
+      },
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -222,6 +241,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv('wine.csv')\n"
+      ],
+      "metadata": {
+        "id": "VsjP6OfHaS7c"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BYbwjNYNEYJU"
@@ -278,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "iXn9_U3rEYJW"
       },
