--- a/Aufgaben Linear Networks/aufgaben_linear_networks.ipynb
+++ b/Aufgaben Linear Networks/aufgaben_linear_networks.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "-ccSPEAFCWOg"
       },
@@ -52,7 +52,8 @@
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
         "import torch\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import autograd as ad"
       ]
     },
     {
@@ -78,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "WE635xQrCWOi"
       },
@@ -113,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "4eJDsl4MCWOk"
       },
@@ -141,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "-M80yzD0CWOl"
       },
@@ -231,16 +232,16 @@
         "loss_arr = np.zeros(n_epoch) # to record current loss\n",
         "\n",
         "for i in range(n_epoch):\n",
-        "    pass\n",
-        "    # 1.  Compute the prediction y_hat\n",
+        "  #pass\n",
+        "  # 1.  Compute the prediction y_hat\n",
+        "  y_hat = linreg(X,w,b)\n",
+        "  loss = squared_loss(y_hat, y)\n",
         "\n",
-        "    # loss = squared_loss(y_hat, y)\n",
+        "  # remember the loss for plotting it later\n",
+        "  loss_arr[i] = loss.detach().numpy()\n",
         "\n",
-        "    # remember the loss for plotting it later\n",
-        "    # loss_arr[i] = loss.detach().numpy()\n",
-        "\n",
-        "    # 2. Use the computed loss to compute the gradients\n",
-        "    # 3. Update the parameters, remember to zero the gradients\n",
+        "  # 2. Use the computed loss to compute the gradients\n",
+        "  # 3. Update the parameters, remember to zero the gradients\n",
         "\n",
         "plt.plot(loss_arr)"
       ]
